# gltf-viewer-tutorial

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
apps/compare-images/: main.cpp
apps/gltf-viewer/: ViewerApplication.cpp  ViewerApplication.hpp  main.cpp  tiny_gltf_impl.cpp
apps/gltf-viewer/shaders/: diffuse_directional_light.fs.glsl  pbr_directional_light.fs.glsl
apps/gltf-viewer/utils/: GLFWHandle.hpp  cameras.cpp  cameras.hpp  filesystem.hpp  gl_debug_output.cpp  gl_debug_output.hpp  glfw.hpp  gltf.cpp  gltf.hpp  images.cpp  images.hpp  shaders.hpp
scripts/: clone_gltf_samples.sh  env.env  generate-reference-images-cmd.sh  generate-reference-images.sh  generate-reference-script.sh  generate-test-images.sh
scripts/shaders/: magenta.fs.glsl
scripts/utils/: GLFWHandle.hpp  cameras.cpp  cameras.hpp  images.hpp
